--- a/style.css
+++ b/style.css
@@ -1,27 +1,71 @@
-*
-{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: monospace;
-
-}
 body
 {
-    display: flex;
-    justify-content: center;
     align-items: center;
-    min-height: 100vh;
-    background-color: yellowgreen;
+    text-align: center;
+    background-color:black;
 }
 .container
 {
-    position: relative;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
-    gap: 30px;
-    background: gray;
-    padding: 40px 60px ;
+    align-items: center;
+    margin-top: 50px;
+}
+h2
+{
+    color: aliceblue;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.game
+{
+    display: grid;
+    grid-template-columns: repeat(4,80px);
+    gap: 10px;
+    margin-top: 20px;
+   
+}
+.item
+{
+    width: 80px;
+    height: 80px;
+    background-color: bisque;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 2rem;
+    border-radius: 10px;
+    cursor: pointer;
+    user-select: none;
+    transition:0.3s ease;
+
+
+}
+.boxOpen
+{
+    background-color: gray;
+    border: 2px solid #f2ff04;
+    transform: rotate(360deg);
+
+}
+.boxMatch
+{
+    background-color: gold;
+    pointer-events: none;
+    transform: rotateY(180deg);
+}
+.reset {
+    margin-top: 20px;
+    padding: 10px 20px;
+    font-size: 1rem;
+    cursor: pointer;
+    background-color: #9a027e;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    transition:  0.3s ease;
+}
+.reset:hover {
+    background-color: #730062;
 }
